--- a/MIPRIMERAPAGINA/Inicio.html
+++ b/MIPRIMERAPAGINA/Inicio.html
@@ -68,7 +68,7 @@
         <a href="#" class="u-btn u-button-style u-palette-2-base u-btn-1">Read More</a>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-section-2" id="sec-d9b5">
+    <section class="u-align-center u-clearfix u-lightbox u-section-2" id="sec-d9b5">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-1">NUESTRA GALERIA</h2>
         <p class="u-text u-text-2">favoritos</p>
