--- a/MIPRIMERAPAGINA/Inicio.html
+++ b/MIPRIMERAPAGINA/Inicio.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="mi primera página, NUESTRA GALERIA">
+    <meta name="keywords" content="Nos actualizamos juntos, NUESTRA GALERIA">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
     <title>Inicio</title>
@@ -32,7 +32,7 @@
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </symbol>
@@ -40,10 +40,10 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Inicio.html" style="padding: 10px 20px;">Inicio</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Quienes-somos.html" style="padding: 10px 20px;">Quienes somos</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Repositorio.html" style="padding: 10px 20px;">Repositorio</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Página-1.html" style="padding: 10px 20px;">Página 1</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Inicio.html" style="padding: 10px 20px;">Inicio</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Quienes-somos.html" style="padding: 10px 20px;">Quienes somos</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="Repositorio.html" style="padding: 10px 20px;">Repositorio</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base u-white" href="tel:931944108" style="padding: 10px 20px;">Contacto</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -53,7 +53,7 @@
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Inicio.html" style="padding: 10px 20px;">Inicio</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Quienes-somos.html" style="padding: 10px 20px;">Quienes somos</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Repositorio.html" style="padding: 10px 20px;">Repositorio</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Página-1.html" style="padding: 10px 20px;">Página 1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="tel:931944108" style="padding: 10px 20px;">Contacto</a>
 </li></ul>
               </div>
             </div>
@@ -63,19 +63,20 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="800" data-image-height="450" id="sec-a260">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-        <h1 class="u-text u-text-default u-title u-text-1">mi primera página</h1>
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">aprendamos</p>
-        <a href="#" class="u-btn u-button-style u-palette-2-base u-btn-1">Read More</a>
+        <h1 class="u-text u-text-default u-title u-text-1">Nos actualizamos juntos</h1>
+        <p class="u-large-text u-text u-text-default u-text-variant u-text-2">surgimos desde el ombligo del mundo</p>
+        <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-dark-1 u-palette-2-base u-radius-10 u-btn-1">saber más</a>
       </div>
     </section>
     <section class="u-align-center u-clearfix u-lightbox u-section-2" id="sec-d9b5">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-1">NUESTRA GALERIA</h2>
-        <p class="u-text u-text-2">favoritos</p>
+        <p class="u-text u-text-2">los lugares más visitados por nuestra gente<span style="font-size: 1.25rem;"></span>
+        </p>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="275" data-image-height="183">
+              <div class="u-back-slide u-back-slide-1" data-image-width="275" data-image-height="183">
                 <img class="u-back-image u-expanded" src="images/44d80d19a6ef498eac8bc118e784a8ede6c4a899f18b619861fa3dc486c7cc71b86508d97c6d29378d9ff3b4a581b1e40cb7100f4b11962a173ec8_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
@@ -84,7 +85,7 @@
               </div>
             </div>
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="884" data-image-height="588">
+              <div class="u-back-slide u-back-slide-2" data-image-width="884" data-image-height="588">
                 <img class="u-back-image u-expanded" src="images/987e8e6383fc671ac851456739e2a7f1a30aa3931337a85d76a250165095458334d790d8ef5e18090dc0e7b2ad67b2c92229f403bac44a9074d7c4_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
@@ -93,7 +94,7 @@
               </div>
             </div>
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide" data-image-width="1200" data-image-height="630">
+              <div class="u-back-slide u-back-slide-3" data-image-width="1200" data-image-height="630">
                 <img class="u-back-image u-expanded" src="images/995ac2de2d893a104424defd883078f42a8330e0bd5b7279389b3fe4754063ec31ae6bdf30e8d07cb0a9796bc1bafda25a36ca856fe2cb9331953d_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-3">
