--- a/MIPRIMERAPAGINA/index.html
+++ b/MIPRIMERAPAGINA/index.html
@@ -62,7 +62,7 @@
         </nav>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="800" data-image-height="450" id="sec-a260">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-title u-text-1">Nos actualizamos juntos</h1>
         <p class="u-large-text u-text u-text-default u-text-variant u-text-2">surgimos desde el ombligo del mundo</p>
         <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-dark-1 u-palette-2-base u-radius-10 u-btn-1">saber más</a>
@@ -76,7 +76,7 @@
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide u-back-slide-1" data-image-width="275" data-image-height="183">
+              <div class="u-back-slide u-back-slide-1" data-image-width="800" data-image-height="450">
                 <img class="u-back-image u-expanded" src="images/44d80d19a6ef498eac8bc118e784a8ede6c4a899f18b619861fa3dc486c7cc71b86508d97c6d29378d9ff3b4a581b1e40cb7100f4b11962a173ec8_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
@@ -85,8 +85,8 @@
               </div>
             </div>
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide u-back-slide-2" data-image-width="884" data-image-height="588">
-                <img class="u-back-image u-expanded" src="images/987e8e6383fc671ac851456739e2a7f1a30aa3931337a85d76a250165095458334d790d8ef5e18090dc0e7b2ad67b2c92229f403bac44a9074d7c4_1280.jpg">
+              <div class="u-back-slide u-back-slide-2" data-image-width="1280" data-image-height="852">
+                <img class="u-back-image u-expanded" src="images/44d80d19a6ef498eac8bc118e784a8ede6c4a899f18b619861fa3dc486c7cc71b86508d97c6d29378d9ff3b4a581b1e40cb7100f4b11962a173ec8_12801.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
                 <h3 class="u-gallery-heading"></h3>
