--- a/Inicio.html
+++ b/Inicio.html
@@ -32,11 +32,13 @@
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-            <a class="u-button-style u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
-              <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
-              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><symbol id="menu-hamburger" viewBox="0 0 16 16" style="width: 16px; height: 16px;"><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
-</symbol>
-</defs></svg>
+            <a class="u-button-style u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="color: rgb(17, 17, 17) !important;">
+              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 60 60" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-b028"></use></svg>
+              <svg class="u-svg-content" viewBox="0 0 60 60" x="0px" y="0px" id="svg-b028" style="enable-background:new 0 0 60 60;"><path d="M38.914,0H6.5v60h47V14.586L38.914,0z M17.5,14h10c0.552,0,1,0.447,1,1s-0.448,1-1,1h-10c-0.552,0-1-0.447-1-1
+	S16.948,14,17.5,14z M42.5,48h-25c-0.552,0-1-0.447-1-1s0.448-1,1-1h25c0.552,0,1,0.447,1,1S43.052,48,42.5,48z M42.5,40h-25
+	c-0.552,0-1-0.447-1-1s0.448-1,1-1h25c0.552,0,1,0.447,1,1S43.052,40,42.5,40z M42.5,32h-25c-0.552,0-1-0.447-1-1s0.448-1,1-1h25
+	c0.552,0,1,0.447,1,1S43.052,32,42.5,32z M42.5,24h-25c-0.552,0-1-0.447-1-1s0.448-1,1-1h25c0.552,0,1,0.447,1,1S43.052,24,42.5,24z
+	 M37.5,16V2l14,14H37.5z"></path></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
@@ -63,20 +65,20 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="800" data-image-height="450" id="sec-a260">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-title u-text-1">Nos actualizamos juntos</h1>
+        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-title u-text-1">Nos actualizamos juntos</h1>
         <p class="u-large-text u-text u-text-default u-text-variant u-text-2">surgimos desde el ombligo del mundo</p>
         <a href="#" class="u-border-none u-btn u-btn-round u-button-style u-hover-palette-1-dark-1 u-palette-2-base u-radius-10 u-btn-1">saber más</a>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-lightbox u-section-2" id="sec-d9b5">
+    <section class="u-align-center u-clearfix u-gradient u-lightbox u-section-2" id="sec-d9b5">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-1">NUESTRA GALERIA</h2>
+        <h1 class="u-text u-text-white u-title u-text-1" data-animation-name="bounceIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="">NUESTRA GALERIA</h1>
         <p class="u-text u-text-2">los lugares más visitados por nuestra gente<span style="font-size: 1.25rem;"></span>
         </p>
         <div class="u-expanded-width u-gallery u-layout-grid u-lightbox u-show-text-on-hover u-gallery-1">
           <div class="u-gallery-inner u-gallery-inner-1">
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide u-back-slide-1" data-image-width="800" data-image-height="450">
+              <div class="u-back-slide u-back-slide-1" data-image-width="275" data-image-height="183">
                 <img class="u-back-image u-expanded" src="images/44d80d19a6ef498eac8bc118e784a8ede6c4a899f18b619861fa3dc486c7cc71b86508d97c6d29378d9ff3b4a581b1e40cb7100f4b11962a173ec8_1280.jpg">
               </div>
               <div class="u-over-slide u-shading u-over-slide-1">
@@ -85,12 +87,12 @@
               </div>
             </div>
             <div class="u-effect-fade u-gallery-item">
-              <div class="u-back-slide u-back-slide-2" data-image-width="1280" data-image-height="852">
-                <img class="u-back-image u-expanded" src="images/44d80d19a6ef498eac8bc118e784a8ede6c4a899f18b619861fa3dc486c7cc71b86508d97c6d29378d9ff3b4a581b1e40cb7100f4b11962a173ec8_12801.jpg">
+              <div class="u-back-slide u-back-slide-2" data-image-width="884" data-image-height="588">
+                <img class="u-back-image u-expanded" src="images/44d80d19a6ef498eac8bc118e784a8ede6c4a899f18b619861fa3dc486c7cc71b86508d97c6d29378d9ff3b4a581b1e40cb7100f4b11962a173ec8_12801.jpg" alt="CERRO DE 7 COLORES">
               </div>
               <div class="u-over-slide u-shading u-over-slide-2">
-                <h3 class="u-gallery-heading"></h3>
-                <p class="u-gallery-text"></p>
+                <h3 class="u-gallery-heading">CERRO DE 7 COLORES</h3>
+                <p class="u-gallery-text">Esta ubicado en el distrito de pitumarca</p>
               </div>
             </div>
             <div class="u-effect-fade u-gallery-item">
